--- a/GameDev++/GameDev++.vcxproj
+++ b/GameDev++/GameDev++.vcxproj
@@ -150,14 +150,14 @@
     <ClCompile Include="MathUtil.cpp" />
     <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="Shape.cpp" />
-    <ClCompile Include="Vector2.cpp" />
+    <ClCompile Include="Vec2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Circle.h" />
     <ClInclude Include="MathUtil.h" />
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="Shape.h" />
-    <ClInclude Include="Vector2.h" />
+    <ClInclude Include="Vec2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
