added game manager - when collision happens lose health - when enemy is evaded gain score - when hp is 0 -> close window

--- a/GameDev++/GameDev++.vcxproj
+++ b/GameDev++/GameDev++.vcxproj
@@ -146,6 +146,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Circle.cpp" />
     <ClCompile Include="MathUtil.cpp" />
@@ -157,6 +158,7 @@
   <ItemGroup>
     <ClInclude Include="Circle.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="MathUtil.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rectangle.h" />
